--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>B8A2 Gamer Zone</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.png">
     <link rel="stylesheet" href="css/style.css" />
+     <!-- FONT-AWESOME -->
+     <script src="https://kit.fontawesome.com/30eb8e483f.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
